[gd_scene load_steps=4 format=2]

[ext_resource path="res://splashParticle.tscn" type="PackedScene" id=1]
[ext_resource path="res://trigger.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="trigger" type="Node2D"]
script = ExtResource( 2 )

[node name="SplashArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SplashArea"]
position = Vector2( -0.25, 0 )
shape = SubResource( 1 )

[node name="splash_particle" parent="SplashArea" instance=ExtResource( 1 )]
scale = Vector2( 0.25, 0.25 )
[connection signal="body_entered" from="SplashArea" to="." method="_on_SplashArea_body_entered"]
